--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 *{
-    margin: 0;
-    padding: 0;
+    
     box-sizing: border-box;
 }
 
@@ -11,39 +10,60 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    margin: 0;
+
 }
 
 
 .search{
+    
     position: relative;
-    height: 3rem;
+    height: 50px;
     
 }
 .search .input{
-    width: 12rem;
-    height: 3rem;
-    color: #fff;
-    border: none;
-    border-radius:  1.2rem 0 0 1.2rem  ;
-    font-size: 1rem;
-    transition: width 0.35s ease; 
+    background-color: #fff;
+    border: 0;
+    font-size: 18px;
     padding: 15px;
-    background-color: rgb(46, 41, 41);
+    width: 50px;
+    height: 50px;
+    transition:  0.7s ease; 
+    border-radius:  1.2rem 0 0 1.2rem  ;
 }
 
 
 .btn{
-    position: absolute;
-    background-color: rgb(46, 41, 41);
+    
+    background-color: #fff;
     border: 0;
-    font-size: 1.5rem;
-    color: black;
-    top:0 ;
-    height: 3rem;
-    transition: width 0.35s ease; 
     cursor: pointer;
+    font-size: 24px;
+    position: absolute;
+    top:0 ;
+    left: 0;
+    height: 50px;
+    width: 50px;
+    transition: transform 0.7s ease; 
     border-radius: 0 1.2rem 1.2rem 0 ;
-    color: rgb(171, 163, 163);
-    padding-right: 15px;
+   }
+
+
+.btn:focus,
+.input:focus
+{
+    outline: none;
+
 }
+
+.search.active .input{
+    width: 300px;
+}
+
+.search.active .btn{
+    transform: translateX(298px);
+    
+}
+
 
